@@ -20,26 +20,18 @@
 package org.xwiki.localization.script;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.Locale;
 import java.util.Set;
 
-import javax.inject.Provider;
-
-import org.apache.commons.lang3.ArrayUtils;
 import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
-import org.mockito.invocation.InvocationOnMock;
-import org.mockito.stubbing.Answer;
 import org.xwiki.component.manager.ComponentManager;
-import org.xwiki.component.util.DefaultParameterizedType;
 import org.xwiki.environment.Environment;
 import org.xwiki.localization.LocalizationContext;
 import org.xwiki.localization.LocalizationManager;
-import org.xwiki.localization.Translation;
-import org.xwiki.rendering.block.WordBlock;
 import org.xwiki.rendering.renderer.BlockRenderer;
-import org.xwiki.rendering.renderer.printer.WikiPrinter;
 import org.xwiki.rendering.syntax.Syntax;
 import org.xwiki.script.service.ScriptService;
 import org.xwiki.test.mockito.MockitoComponentMockingRule;
@@ -48,18 +40,15 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertTrue;
-import static org.mockito.Mockito.any;
-import static org.mockito.Mockito.doAnswer;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.eq;
-import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 public class LocalizationScriptServiceTest
 {
-
     @Rule
     public MockitoComponentMockingRule<ScriptService> mocker =
-        new MockitoComponentMockingRule<ScriptService>(LocalizationScriptService.class);
+        new MockitoComponentMockingRule<>(LocalizationScriptService.class);
 
     private BlockRenderer renderer;
 
@@ -71,38 +60,19 @@ public class LocalizationScriptServiceTest
 
     private LocalizationScriptService localizationScriptService;
 
-    private Translation translation;
-
     private Environment environment;
 
     @Before
     public void setUp() throws Exception
     {
-        componentManager = mock(ComponentManager.class);
-        Provider<ComponentManager> componentManagerProvider = mocker.registerMockComponent(
-            new DefaultParameterizedType(null, Provider.class, ComponentManager.class), "context");
-        when(componentManagerProvider.get()).thenReturn(componentManager);
-
-        renderer = mock(BlockRenderer.class, Syntax.PLAIN_1_0.toIdString());
-        when(componentManager.getInstance(BlockRenderer.class, Syntax.PLAIN_1_0.toIdString())).thenReturn(renderer);
-
         localizationContext = mocker.getInstance(LocalizationContext.class);
         localizationManager = mocker.getInstance(LocalizationManager.class);
         localizationScriptService = (LocalizationScriptService) mocker.getComponentUnderTest();
-        translation = mock(Translation.class);
 
-        doAnswer(new Answer<Object>()
-        {
-            @Override
-            public Object answer(InvocationOnMock invocation) throws Throwable
-            {
-                WikiPrinter printer = (WikiPrinter) invocation.getArguments()[1];
-                printer.print("print result");
-                return null;
-            }
-        }).when(renderer).render(eq(new WordBlock("message")), any(WikiPrinter.class));
-        when(translation.render(Locale.ROOT, ArrayUtils.EMPTY_OBJECT_ARRAY)).thenReturn(new WordBlock("message"));
-        when(localizationManager.getTranslation("key", Locale.ROOT)).thenReturn(translation);
+        when(localizationManager.getTranslation(eq("key"), eq(Locale.ROOT), eq(Syntax.PLAIN_1_0), any())).thenReturn(
+            "messageWithParam");
+        when(localizationManager.getTranslation(eq("key"), eq(Locale.ROOT), eq(Syntax.PLAIN_1_0))).thenReturn(
+            "messageNoParam");
         when(localizationContext.getCurrentLocale()).thenReturn(Locale.ROOT);
 
         environment = mocker.getInstance(Environment.class);
@@ -111,44 +81,44 @@ public class LocalizationScriptServiceTest
     @Test
     public void render() throws Exception
     {
-        assertEquals("print result", localizationScriptService.render("key"));
-        assertEquals("print result",
+        assertEquals("messageNoParam", localizationScriptService.render("key"));
+        assertEquals("messageNoParam",
             localizationScriptService.render(Arrays.asList(null, "not existing key", "key", "another key")));
     }
 
     @Test
-    public void renderWithSyntax() throws Exception
+    public void renderWithSyntax()
     {
-        assertEquals("print result", localizationScriptService.render("key", Syntax.PLAIN_1_0));
-        assertEquals("print result", localizationScriptService
+        assertEquals("messageNoParam", localizationScriptService.render("key", Syntax.PLAIN_1_0));
+        assertEquals("messageNoParam", localizationScriptService
             .render(Arrays.asList(null, "not existing key", "key", "another key"), Syntax.PLAIN_1_0));
     }
 
     @Test
-    public void renderWithSyntaxAndParameters() throws Exception
+    public void renderWithSyntaxAndParameters()
     {
-        assertEquals("print result", localizationScriptService.render("key", Syntax.PLAIN_1_0, Arrays.asList()));
-        assertEquals("print result", localizationScriptService
-            .render(Arrays.asList(null, "not existing key", "key", "another key"), Syntax.PLAIN_1_0, Arrays.asList()));
+        assertEquals("messageWithParam", localizationScriptService.render("key", Syntax.PLAIN_1_0, List.of("param")));
+        assertEquals("messageWithParam", localizationScriptService
+            .render(Arrays.asList(null, "not existing key", "key", "another key"), Syntax.PLAIN_1_0, List.of("param")));
     }
 
     @Test
-    public void renderWithParameters() throws Exception
+    public void renderWithParameters()
     {
-        assertEquals("print result", localizationScriptService.render("key", Arrays.asList()));
-        assertEquals("print result", localizationScriptService
-            .render(Arrays.asList(null, "not existing key", "key", "another key"), Arrays.asList()));
+        assertEquals("messageWithParam", localizationScriptService.render("key", List.of("param")));
+        assertEquals("messageWithParam", localizationScriptService
+            .render(Arrays.asList(null, "not existing key", "key", "another key"), List.of("param")));
     }
 
     @Test
-    public void getCurrentLocale() throws Exception
+    public void getCurrentLocale()
     {
         when(localizationContext.getCurrentLocale()).thenReturn(Locale.ENGLISH);
         assertEquals(Locale.ENGLISH, localizationScriptService.getCurrentLocale());
     }
 
     @Test
-    public void getAvailableLocales() throws Exception
+    public void getAvailableLocales()
     {
         when(environment.getResourceAsStream(eq("/WEB-INF/xwiki-locales.txt")))
             .thenReturn(getClass().getResourceAsStream("/xwiki-locales.txt"));
